@@ -29,13 +29,13 @@ number_of_models = 2
 # Set up each model:
 model1.name=T92 # The name of the model, as above. Covarion models can be used.
 model1.kappa=2 # Initial values for each parameter.
-model1.theta=0.5
+model1.theta=0.1
 model1.nodes_id=0:62 # The Ids of the nodes to which this model should be assigned.
 
 model2.name=T92
 model2.kappa=1 # or model2.kappa=model1.kappa if you want only one kappa parameter estimated for both models.
 model2.theta=0.9
-model2.nodes_id=63:154
+model2.nodes_id=63:155
 
 //model3.name=HKY85
 //model3.kappa=2
