@@ -68,6 +68,53 @@ knowledge of the CeCILL license and that you accept its terms.
 
 using namespace std;
 
+/**
+ * @brief Read trees from an input file, with segment annotations.
+ */
+void readTrees(ifstream& file, vector<TreeTemplate<Node> *>& trees, vector<double>& pos) throw (Exception)
+{
+  string line = "";
+  double begin, end;
+  string::size_type index1, index2, index3;
+  double previousPos = 0;
+  pos.push_back(0);
+  string newickStr;
+  while(!file.eof())
+  {
+    string tmp = TextTools::removeSurroundingWhiteSpaces(FileTools::getNextLine(file));
+    if(tmp.size() == 0 || tmp.substr(0, 1) == "#") continue;
+    line += tmp;
+        
+    index1 = line.find_first_of(" \t");
+    if(index1 == string::npos) throw Exception("Error when parsing tree file: now begining position.");
+    index2 = line.find_first_of(" \t", index1 + 1);
+    if(index2 == string::npos) throw Exception("Error when parsing tree file: now ending position.");
+    begin  = TextTools::toDouble(line.substr(0, index1));
+    end    = TextTools::toDouble(line.substr(index1 + 1, index2 - index1 - 1));
+    index3 = line.find_first_of(";", index2 + 1);
+    while(index3 == string::npos)
+    {
+      if(file.eof()) throw Exception("Error when parsing tree file: incomplete tree.");
+      line += FileTools::getNextLine(file);
+      index3 = line.find_first_of(";", index3);
+    }
+    newickStr = line.substr(index2 + 1, index3 - index2 - 1);
+    TreeTemplate<Node>* t = TreeTemplateTools::parenthesisToTree(newickStr);
+    if(trees.size() > 0)
+    {
+      //Check leave names:
+      if(!VectorTools::haveSameElements(t->getLeavesNames(), trees[trees.size()-1]->getLeavesNames()))
+        throw Exception("Error: all trees must have the same leaf names.");
+    }
+    trees.push_back(t);
+    if(begin != previousPos) throw Exception("Error when parsing tree file: segments do not match: " + TextTools::toString(begin) + " against " + TextTools::toString(previousPos) + ".");
+    pos.push_back(end);
+    previousPos = end;
+
+    line = line.substr(index3 + 1);
+  }
+}
+
 void help()
 {
   *ApplicationTools::message << "__________________________________________________________________________" << endl;
@@ -128,29 +175,44 @@ int main(int args, char ** argv)
 
   Alphabet * alphabet = SequenceApplicationTools::getAlphabet(params, "", false);
 
-  TreeTemplate<Node> * tree = PhylogeneticsApplicationTools::getTree(params);
-  ApplicationTools::displayResult("Number of leaves", TextTools::toString(tree->getNumberOfLeaves()));
-  ApplicationTools::displayResult("Number of sons at root", TextTools::toString(tree->getRootNode()->getNumberOfSons()));
-
-  string treeWIdPath = ApplicationTools::getAFilePath("output.tree.path", params, false, false);
-  if(treeWIdPath != "none")
+  vector<TreeTemplate<Node> *> trees;
+  vector<double> positions;
+  string inputTrees = ApplicationTools::getStringParameter("input.tree.method", params, "single", "", true, false);
+  if(inputTrees == "single")
   {
-    vector<Node *> nodes = tree->getNodes();
-    for(unsigned int i = 0; i < nodes.size(); i++)
+    trees.push_back(PhylogeneticsApplicationTools::getTree(params));
+    positions.push_back(0);
+    positions.push_back(1);
+    ApplicationTools::displayResult("Number of leaves", TextTools::toString(trees[0]->getNumberOfLeaves()));
+    ApplicationTools::displayResult("Number of sons at root", TextTools::toString(trees[0]->getRootNode()->getNumberOfSons()));
+    string treeWIdPath = ApplicationTools::getAFilePath("output.tree.path", params, false, false);
+    if(treeWIdPath != "none")
     {
-      if(nodes[i]->isLeaf())
-        nodes[i]->setName(TextTools::toString(nodes[i]->getId()) + "_" + nodes[i]->getName());
-      else
-        nodes[i]->setBranchProperty("NodeId", String(TextTools::toString(nodes[i]->getId())));
+      vector<Node *> nodes = trees[0]->getNodes();
+      for(unsigned int i = 0; i < nodes.size(); i++)
+      {
+        if(nodes[i]->isLeaf())
+          nodes[i]->setName(TextTools::toString(nodes[i]->getId()) + "_" + nodes[i]->getName());
+        else
+          nodes[i]->setBranchProperty("NodeId", String(TextTools::toString(nodes[i]->getId())));
+      }
+      Newick treeWriter;
+      treeWriter.enableExtendedBootstrapProperty("NodeId");
+      ApplicationTools::displayResult("Writing tagged tree to", treeWIdPath);
+      treeWriter.write(*trees[0], treeWIdPath);
+      delete trees[0];
+      cout << "BppSegGen's done." << endl;
+      exit(0);
     }
-    Newick treeWriter;
-    treeWriter.enableExtendedBootstrapProperty("NodeId");
-    ApplicationTools::displayResult("Writing tagged tree to", treeWIdPath);
-    treeWriter.write(*tree, treeWIdPath);
-    delete tree;
-    cout << "BppSegGen's done." << endl;
-    exit(0);
   }
+  else if(inputTrees == "multiple")
+  {
+    string treesPath = ApplicationTools::getAFilePath("tree.file", params, false, true);
+    ApplicationTools::displayResult("Trees file", treesPath);
+    ifstream treesFile(treesPath.c_str(), ios::in);
+    readTrees(treesFile, trees, positions);
+  }
+  else throw Exception("Unknown input.tree.method option: " + inputTrees);
 
   string infosFile = ApplicationTools::getAFilePath("input.infos", params, false, true);
   ApplicationTools::displayResult("Site information", infosFile);
@@ -164,19 +226,33 @@ int main(int args, char ** argv)
   if(nhOpt == "no")
   {
     SubstitutionModel * model = PhylogeneticsApplicationTools::getSubstitutionModel(alphabet,NULL, params);
-    modelSet = SubstitutionModelSetTools::createHomogeneousModelSet(model, tree);
+    FrequenciesSet* fSet = new FixedFrequenciesSet(model->getAlphabet(), model->getFrequencies());
+    modelSet = SubstitutionModelSetTools::createHomogeneousModelSet(model, fSet, trees[0]);
   }
   //Galtier-Gouy case:
   else if(nhOpt == "one_per_branch")
   {
-    SubstitutionModel * model = PhylogeneticsApplicationTools::getSubstitutionModel(alphabet,NULL, params);
+    if(inputTrees == "multiple")
+      throw Exception("Multiple input trees cannot be used with non-homogeneous simulations.");
+    SubstitutionModel * model = PhylogeneticsApplicationTools::getSubstitutionModel(alphabet, NULL, params);
     vector<string> globalParameters = ApplicationTools::getVectorParameter<string>("nonhomogeneous_one_per_branch.shared_parameters", params, ',', "");
-    modelSet = SubstitutionModelSetTools::createNonHomogeneousModelSet(model, tree, globalParameters); 
+    vector<double> rateFreqs;
+    if(model->getNumberOfStates() != alphabet->getSize())
+    {
+      //Markov-Modulated Markov Model...
+      unsigned int n =(unsigned int)(model->getNumberOfStates() / alphabet->getSize());
+      rateFreqs = vector<double>(n, 1./(double)n); // Equal rates assumed for now, may be changed later (actually, in the most general case,
+                                                   // we should assume a rate distribution for the root also!!!  
+    }
+    FrequenciesSet* rootFreqs = PhylogeneticsApplicationTools::getFrequenciesSet(alphabet, NULL, params, rateFreqs);
+    modelSet = SubstitutionModelSetTools::createNonHomogeneousModelSet(model, rootFreqs, trees[0], globalParameters); 
   }
-  //General case;
+  //General case:
   else if(nhOpt == "general")
   {
-    modelSet = PhylogeneticsApplicationTools::getSubstitutionModelSet(alphabet,NULL, params);
+    if(inputTrees == "multiple")
+      throw Exception("Multiple input trees cannot be used with non-homogeneous simulations.");
+    modelSet = PhylogeneticsApplicationTools::getSubstitutionModelSet(alphabet, NULL, params);
   }
   else throw Exception("Unknown non-homogeneous option: " + nhOpt);
 
@@ -188,7 +264,6 @@ int main(int args, char ** argv)
     ifstream in(infosFile.c_str());
     DataTable * infos = DataTable::read(in, "\t");
     rDist = new ConstantDistribution(1.);
-    seqsim = new NonHomogeneousSequenceSimulator(modelSet, rDist, tree);
     unsigned int nbSites = infos->getNumberOfRows();
     ApplicationTools::displayResult("Number of sites", TextTools::toString(nbSites));
     vector<double> rates(nbSites);
@@ -197,8 +272,44 @@ int main(int args, char ** argv)
     {
       rates[i] = TextTools::toDouble(ratesStrings[i]);
     }
-    ApplicationTools::displayTask("Perform simulations");
-    sites = SequenceSimulationTools::simulateSites(*seqsim, rates);
+
+    if(trees.size() == 1)
+    {
+      seqsim = new NonHomogeneousSequenceSimulator(modelSet, rDist, trees[0]);
+      ApplicationTools::displayTask("Perform simulations");
+      sites = SequenceSimulationTools::simulateSites(*seqsim, rates);
+      delete seqsim;    
+    }
+    else
+    {
+      ApplicationTools::displayTask("Perform simulations", true);
+      ApplicationTools::displayGauge(0, trees.size() - 1, '=');
+      seqsim = new NonHomogeneousSequenceSimulator(modelSet, rDist, trees[0]);
+      unsigned int previousPos = 0;
+      unsigned int currentPos = (unsigned int)round(positions[1]*(double)nbSites);
+      vector<double> tmpRates(rates.begin() + previousPos, rates.begin() + currentPos);
+      SequenceContainer* tmpCont1 = SequenceSimulationTools::simulateSites(*seqsim, tmpRates);
+      previousPos = currentPos;
+      delete seqsim;
+
+      for(unsigned int i = 1; i < trees.size(); i++)
+      {
+        ApplicationTools::displayGauge(i, trees.size() - 1, '=');
+        seqsim = new NonHomogeneousSequenceSimulator(modelSet, rDist, trees[i]);
+        unsigned int currentPos = (unsigned int)round(positions[i+1]*(double)nbSites);
+        tmpRates = vector<double>(rates.begin() + previousPos + 1, rates.begin() + currentPos);
+        SequenceContainer* tmpCont2 = SequenceSimulationTools::simulateSites(*seqsim, tmpRates);
+        previousPos = currentPos;
+        delete seqsim;
+        VectorSequenceContainer* mergedCont = new VectorSequenceContainer(alphabet);
+        SequenceContainerTools::merge(*tmpCont1, *tmpCont2, *mergedCont);
+        delete tmpCont1;
+        delete tmpCont2;
+        tmpCont1 = mergedCont;
+      }
+      sites = new VectorSiteContainer(* tmpCont1);
+      delete tmpCont1;
+    }
     ApplicationTools::displayTaskDone();
   }
   else
@@ -212,28 +323,63 @@ int main(int args, char ** argv)
     {
 	    rDist = PhylogeneticsApplicationTools::getRateDistribution(params);
     }
-    seqsim = new NonHomogeneousSequenceSimulator(modelSet, rDist, tree);
+
     unsigned int nbSites = ApplicationTools::getParameter<unsigned int>("number_of_sites", params, 100);
-    ApplicationTools::displayResult("Number of sites", TextTools::toString(nbSites));
-    ApplicationTools::displayTask("Perform simulations");
-    sites = seqsim->simulate(nbSites);
-    ApplicationTools::displayTaskDone();
+    if(trees.size() == 1)
+    {
+      seqsim = new NonHomogeneousSequenceSimulator(modelSet, rDist, trees[0]);
+      ApplicationTools::displayResult("Number of sites", TextTools::toString(nbSites));
+      ApplicationTools::displayTask("Perform simulations");
+      sites = seqsim->simulate(nbSites);
+      ApplicationTools::displayTaskDone();
+    }
+    else
+    {
+      ApplicationTools::displayTask("Perform simulations", true);
+      ApplicationTools::displayGauge(0, trees.size() - 1, '=');
+      seqsim = new NonHomogeneousSequenceSimulator(modelSet, rDist, trees[0]);
+      unsigned int previousPos = 0;
+      unsigned int currentPos = (unsigned int)round(positions[1]*(double)nbSites);
+      SequenceContainer* tmpCont1 = seqsim->simulate(currentPos - previousPos);
+      previousPos = currentPos;
+      delete seqsim;
+ 
+      for(unsigned int i = 1; i < trees.size(); i++)
+      {
+        ApplicationTools::displayGauge(i, trees.size() - 1, '=');
+        seqsim = new NonHomogeneousSequenceSimulator(modelSet, rDist, trees[i]);
+        unsigned int currentPos = (unsigned int)round(positions[i+1]*(double)nbSites);
+        SequenceContainer* tmpCont2 = seqsim->simulate(currentPos - previousPos);
+        previousPos = currentPos;
+        delete seqsim;
+        VectorSequenceContainer* mergedCont = new VectorSequenceContainer(alphabet);
+        SequenceContainerTools::merge(*tmpCont1, *tmpCont2, *mergedCont);
+        delete tmpCont1;
+        delete tmpCont2;
+        tmpCont1 = mergedCont;
+      }
+      sites = new VectorSiteContainer(* tmpCont1);
+      ApplicationTools::displayTaskDone();
+      delete tmpCont1;
+    }
   }
   
   // Write to file:
   SequenceApplicationTools::writeSequenceFile(*sites, params);
 
   delete alphabet;
-  delete tree;
+  for(unsigned int i = 0; i < trees.size(); i++)
+    delete trees[i];
   delete rDist;
-  delete seqsim;
 
-  } catch(exception & e) {
+  }
+  catch(exception & e)
+  {
     cout << e.what() << endl;
     exit(-1);
   }
 
-  cout << "BppSegGen's done." << endl;
+  cout << "BppSeqGen's done." << endl;
 
   return (0);
 }
