@@ -1,3 +1,9 @@
+07/11/07 Julien Dutheil
+* Compatibility update with Bio++ cvs.
+* Bug fixed in BppSeqGen.
+* BppSeqGen can now simulate datas from a set of trees (ancestral
+  recombination graph).
+
 25/10/07 Julien Dutheil
 * Several bug fixed in BppML and BppSeqGen with non-homogeneous models.
 * Examples updated + new example option files for non-homogeneous models.
